namespaces/prd/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: blog-tls
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`berwout.nl`) || Host(`www.berwout.nl`)
    kind: Rule
    services:
    - name: blog
      port: 8080
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dinner-planner-tls
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`dinner.berwout.nl`)
    kind: Rule
    middlewares:
    - name: redirect-scheme
      namespace: default
    services:
    - name: dinner-planner
      port: 8080
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingredient-service-tls
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`dinner.berwout.nl`) && Path(`/api/ingredients`)
    kind: Rule
    services:
    - name: ingredient-service
      port: 8080
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: meal-service-tls
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`dinner.berwout.nl`) && Path(`/api/meals`)
    kind: Rule
    services:
    - name: meal-service
      port: 8080
